k8s/docker-reg/docker-reg.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: docker-reg
  name: docker-registry-pod
  labels:
    app: registry
spec:
  containers:
  - name: registry
    image: registry:2.6.2
    volumeMounts:
    - name: repo-vol
      mountPath: "/var/lib/registry"
    - name: certs-vol
      mountPath: "/certs"
      readOnly: true
  volumes:
  - name: repo-vol
    persistentVolumeClaim:
      claimName: docker-reg-pvc
  - name: certs-vol
    secret:
      secretName: docker-registry-certs
