k8s/docker-reg/docker-reg.svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: docker-reg
  name: docker-reg-svc
spec:
  selector:
    app: registry
  ports:
  - port: 5000
    targetPort: 5000
