k8s/docker-reg/docker-reg.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-reg-ingress
  namespace: docker-reg
spec:
  ingressClassName: nginx
  rules:
  - host: docker-reg.example.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-reg-svc
            port:
              number: 5000
